--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@run27017/vue-chat",
+  "name": "chatbot",
   "version": "0.1.1",
   "main": "dist/chat.umd.min.js",
   "description": "一个开箱即用的 vue 聊天组件，简单、易用，代码清晰",
   "license": "MIT",
   "author": {
-    "name" : "Run Ye", 
-    "email" : "run27017@126.com", 
-    "url" : "https://github.com/run27017"
+    "name": "Ryan LI",
+    "email": "lisongrui@csvw.com",
+    "url": "https://github.com/daydreamatnight"
   },
   "repository": {
-    "type": "git", 
-    "url": "https://github.com/run27017/vue-chat.git"
+    "type": "git",
+    "url": ""
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -31,11 +31,14 @@
     "vue-js-chat"
   ],
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
+    "element-ui": "^2.15.13",
     "vant": "^2.10.4",
     "vue": "^2.6.11",
-    "vue-infinite-loading": "^2.4.5"
+    "vue-infinite-loading": "^2.4.5",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
